Add scroll horizontal functionality

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -9,7 +9,7 @@ body {
     .el-main {
         padding: 0;
         height: 100%;
-        overflow-y: hidden;
+        overflow: hidden;
     }
 }
 
