--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -1,3 +1,7 @@
+html {
+    font-size: 12px;
+}
+
 body {
     background-color: $color-primary;
     margin: 0;
@@ -12,9 +16,18 @@ body {
     min-height: 700px;
 }
 
+.container-stretch {
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
 /** ------ RESPONSIVE BREACK POINTS ----- **/
 /** ------ extra small -----**/
 @media only screen and (min-width: 576px) {
+    html {
+        font-size: 13px;
+    }
+
     .container {
         max-width: 540px;
         margin: auto;
@@ -23,6 +36,10 @@ body {
 
 /** ------ medium -----**/
 @media only screen and (min-width: 768px) {
+    html {
+        font-size: 14px;
+    }
+
     .container {
         max-width: 720px;
         margin: auto;
@@ -31,6 +48,10 @@ body {
 
 /** ------ large -----**/
 @media only screen and (min-width: 992px) {
+    html {
+        font-size: 15px;
+    }
+
     .container {
         max-width: 960px;
         margin: auto;
@@ -39,6 +60,10 @@ body {
 
 /** ------ extra large -----**/
 @media only screen and (min-width: 1200px) {
+    html {
+        font-size: 16px;
+    }
+    
     .container {
         max-width: 1140px;
         margin: auto;
