--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,12 @@
 
 @import 'collapse-btn';
 
+@import 'header';
+
+@import 'about';
+
+@import 'animation';
+
 @import 'portfolio';
 
 @import 'footer';
