--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -1,6 +1,18 @@
 .portfolio {
+    height: 400px;
+    
     .slick-track {
         display: flex;
+    }
+
+    .slick-slide {
+        div {
+            height: 100%;
+        }
+
+        img {
+            height: 100%;
+        }
     }
 
     .slick-prev, 
