--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,5 +1,7 @@
 .navigation-bar {
-  background-color: $color-primary;
+  @include for-md {
+    background-color: $color-primary;
+  }
 
   .navigation-bar-menu {
     display: flex;
@@ -32,10 +34,11 @@
       width: 100%;
       height: 0;
       background-color: #000;
-      transition: 1s;
+      transition: .5s;
       min-height: unset;
 
       .el-menu-item {
+        text-align: center;
         font-size: 0;
         opacity: 0;
         transition: opacity 1s ease-in-out;
@@ -59,9 +62,5 @@
     border-bottom-right-radius: 30px;
     min-height: 41px;
     background-color: #5a23d8;
-
-    .navigation-bar-menu {
-      padding: 0 50px;
-    }
   }
 }
