--- a/src/assets/scss/_stock.scss
+++ b/src/assets/scss/_stock.scss
@@ -30,7 +30,7 @@
     max-width: 300px;
     background-color: $color-primary;
     border-radius: 30px;
-    margin: 25px auto;
+    margin: 25px 10px;
     padding: 25px;
 
     @include for-md {
