--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -43,6 +43,11 @@
         opacity: 0;
         transition: opacity 1s ease-in-out;
       }
+
+      .translate {
+        height: 0;
+        opacity: 0;
+      }
     }
 
     &.active {
@@ -52,6 +57,12 @@
         font-size: 1.563rem;
         margin: 15px 0;
         opacity: 1;
+      }
+
+      .translate {
+        height: auto;
+        opacity: 1;
+        transition: opacity 0.5s ease-in-out;
       }
     }
   }
