--- a/src/assets/scss/_animation.scss
+++ b/src/assets/scss/_animation.scss
@@ -2,7 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 400px;
+
+  @include for-md {
+    height: 100vh;
+  }
 
   h1 {
     color: #fff;
