--- a/src/assets/scss/_stock.scss
+++ b/src/assets/scss/_stock.scss
@@ -21,7 +21,7 @@
   .stock-description {
     text-align: center;
     color: #fff;
-    font-size: 20px;
+    font-size: 16px;
     max-width: 700px;
     margin: auto;
   }
@@ -96,12 +96,12 @@
   .stock-footer {
     p {
       color: #fff;
-      font-size: 20px;
+      font-size: 16px;
       text-align: center;
     }
 
     h5 {
-      color: #fff;
+      color: #FFD800;
       font-size: 48px;
       margin: 0;
       text-align: center;
