--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -3,38 +3,25 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 500px;
-
-  @include for-md {
-    height: 100vh;
-  }
+  padding: 100px 0;
 
   .contact-button {
     max-width: calc(275px - 60px);
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px;
-    border: 1px solid #fff;
-    border-radius: 30px;
+    transition: .5s ease-in-out;
+    border-radius: 25px;
 
     @include for-md {
       max-width: calc(350px - 60px);
     }
-  }
 
-  .contact-button-text {
-    display: flex;
-    flex-direction: column;
+    img {
+      width: 100%;
+    }
 
-    span {
-      font-size: 30px;
-      color: #fff;
-
-      @include for-md {
-        font-size: 50px;
-      }
+    &:hover {
+      cursor: pointer;
+      transform: translateY(-5px);
+      box-shadow: 0 10px 30px 4px;
     }
   }
 
@@ -43,20 +30,20 @@
 
     h3 {
       color: #fff;
-      font-size: 50px;
+      font-size: 30px;
       margin: 0;
 
       @include for-md {
-        font-size: 104px;
+        font-size: 50px;
       }
     }
 
     span {
       color: #fff;
-      font-size: 24px;
+      font-size: 20px;
 
       @include for-md {
-        font-size: 36px;
+        font-size: 24px;
       }
     }
   }
