--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    background-color: #000;
+    background-color: $color-primary;
 
     .footer-content {
         padding: 50px 0;
@@ -14,8 +14,8 @@
     }
 
     .logo {
-        max-width: 500px;
-        margin: 50px auto;
+        max-width: 300px;
+        margin: 22px auto;
 
         img {
             width: 100%;
@@ -36,6 +36,7 @@
                 color: #fff;
                 font-size: 16px;
                 text-align: center;
+                height: 34px;
 
                 &:focus,
                 &:hover {
