--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -5,10 +5,11 @@ html {
 body {
     background-color: $color-primary;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .shadow {
-    box-shadow: 0 0 20px 0;
+    box-shadow: 0 0 20px 0 $color-secondary;
 }
 
 .section-vh {
