--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -25,46 +25,6 @@
         border-color: transparent;
       }
     }
-
-    &.collapse-menu {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 0;
-      width: 100%;
-      height: 0;
-      background-color: #000;
-      transition: .5s;
-      min-height: unset;
-
-      .el-menu-item {
-        text-align: center;
-        font-size: 0;
-        opacity: 0;
-        transition: opacity 1s ease-in-out;
-      }
-
-      .theme-switcher {
-        height: 0;
-        opacity: 0;
-      }
-    }
-
-    &.active {
-      height: 100vh;
-
-      .el-menu-item {
-        font-size: 1.563rem;
-        margin: 15px 0;
-        opacity: 1;
-      }
-
-      .theme-switcher {
-        height: auto;
-        opacity: 1;
-        transition: opacity 0.5s ease-in-out;
-      }
-    }
   }
 
   .navigation-bar-mobile {
@@ -73,5 +33,51 @@
     border-bottom-right-radius: 30px;
     min-height: 41px;
     background-color: $color-primary;
+    height: 0;
+    transition: .2s;
+
+    &.active {
+      height: 100vh;
+      overflow: auto;
+    }
+
+    .navigation-bar-menu {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0;
+      width: 100%;
+      height: 0;
+      background-color: #000;
+      min-height: unset;
+
+      .el-menu-item {
+        text-align: center;
+        font-size: 0;
+        opacity: 0;
+        transition: opacity .3s ease-in-out;
+      }
+
+      .theme-switcher {
+        height: 0;
+        opacity: 0;
+      }
+
+      &.active {
+        height: 500px;
+
+        .el-menu-item {
+          font-size: 1.563rem;
+          margin: 15px 0;
+          opacity: 1;
+        }
+
+        .theme-switcher {
+          height: auto;
+          opacity: 1;
+          transition: opacity 0.3s ease-in-out;
+        }
+      }
+    }
   }
 }
