--- a/src/assets/scss/_collapse-btn.scss
+++ b/src/assets/scss/_collapse-btn.scss
@@ -1,33 +1,30 @@
 .collapse-btn {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    position: absolute;
-    left: 0;
-    right: 0;  
-    bottom: 0;
-    z-index: 9;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  position: relative;
+  z-index: 99999;
+
+  span {
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    transition: .5s;
+  }
+
+  &.active {
+    margin-bottom: 100px;
 
     span {
-        display: block;
-        width: 30px;
-        height: 2px;
-        background-color: #fff;
-        transition: 0.5s ease-in-out;
+      &:nth-child(1) {
+        transform: rotate(-45deg);
+      }
+
+      &:nth-child(2) {
+        transform: rotate(45deg);
+        margin-left: -30px;
+      }
     }
-
-    &.active {
-        bottom: 0;
-
-        span {
-            &:nth-child(1) {
-                transform: rotate(-15deg);
-            }
-
-            &:nth-child(2) {
-                transform: rotate(15deg);
-                margin-left: -1px;
-            }
-        }   
-    }
+  }
 }
