--- a/src/assets/scss/_stock.scss
+++ b/src/assets/scss/_stock.scss
@@ -30,19 +30,21 @@
     margin: auto;
   }
 
-  //.slick-slider {
-  //  margin-left: -15px;
-  //  margin-right: -15px;
-  //}
+  .slick-slider {
+    margin: 0 -15px;
+
+    @include for-sm {
+      margin: unset;
+    }
+  }
 
   .stock-item-card {
     display: flex;
     flex-direction: column;
-    max-width: 250px;
-    width: calc(100% - 10px);
+    width: calc(100% - 20px);
     background-color: $color-static;
     border-radius: 30px;
-    margin: 25px 5px;
+    margin: 25px 10px;
     padding: 25px 0;
 
     img {
@@ -50,35 +52,45 @@
     }
 
     @include for-md {
+      width: calc(100% - 50px);
       margin: 25px;
     }
   }
 
   .stock-item-title {
+    padding: 0 20px;
+
     h3 {
       text-align: center;
-      font-size: 32px;
-      font-weight: 100;
+      font-size: 28px;
+      font-weight: 700;
       color: #fff;
       margin-top: 0;
-      margin-bottom: 20px;
+      margin-bottom: 0;
+      text-transform: uppercase;
 
       @include for-md {
-        font-size: 38px;
+        font-size: 32px;
       }
     }
   }
 
   .stock-item-description {
+    padding: 0 20px;
+
     p {
       text-align: center;
-      color: #fff;
+      color: #000;
+      margin-top: 0;
+      margin-bottom: 25px;
+      font-weight: 700;
     }
   }
 
   .stock-item-animation {
     min-height: 175px;
     overflow: hidden;
+    display: flex;
 
     img {
       width: 100%;
@@ -92,20 +104,8 @@
     a {
       text-decoration: none;
       color: #fff;
-      font-size: 28px;
+      font-size: 20px;
       font-weight: 700;
-    }
-
-    i {
-      font-size: 24px;
-      font-weight: 700;
-      transition: 0.5s ease-in-out;
-    }
-
-    &:hover {
-      i {
-        transform: translateX(10px);
-      }
     }
   }
 
