--- a/src/assets/scss/_collapse-btn.scss
+++ b/src/assets/scss/_collapse-btn.scss
@@ -2,8 +2,14 @@
   display: flex;
   justify-content: center;
   padding: 20px;
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 99999;
+  background-color: $color-primary;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 
   span {
     display: block;
@@ -14,7 +20,8 @@
   }
 
   &.active {
-    margin-bottom: 100px;
+    //margin-bottom: 100px;
+    padding-bottom: 100px;
 
     span {
       &:nth-child(1) {
@@ -27,4 +34,9 @@
       }
     }
   }
+}
+
+@keyframes fadeOut {
+  from {opacity: 1;}
+  to {opacity: 0;}
 }
