--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -34,7 +34,7 @@
     min-height: 41px;
     background-color: $color-primary;
     height: 0;
-    transition: .2s;
+    transition: height .5s ease-in-out;
 
     &.active {
       height: 100vh;
@@ -48,6 +48,7 @@
       padding: 0;
       width: 100%;
       height: 0;
+      transition: height .5s ease-in-out;
       background-color: #000;
       min-height: unset;
 
