Redesign stock, adjust other elements

--- a/src/assets/scss/_collapse-btn.scss
+++ b/src/assets/scss/_collapse-btn.scss
@@ -20,8 +20,7 @@
   }
 
   &.active {
-    //margin-bottom: 100px;
-    padding-bottom: 100px;
+    margin-bottom: 100px;
 
     span {
       &:nth-child(1) {
