--- a/src/assets/scss/_theme_swither.scss
+++ b/src/assets/scss/_theme_swither.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 30px;
 
   .el-switch__core {
     &::after {
@@ -11,6 +10,7 @@
   }
 
   .theme {
+    font-size: 1rem;
     color: #fff;
     margin: 0 10px;
   }
