--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,4 +1,9 @@
 .navigation-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+
   @include for-md {
     background-color: $color-primary;
   }
@@ -6,8 +11,7 @@
   .navigation-bar-menu {
     display: flex;
     justify-content: space-between;
-    padding: 30px 0;
-    width: 100%;
+    padding: 20px 0;
     border: none;
 
     &.el-menu.el-menu--horizontal {
@@ -18,7 +22,7 @@
       background-color: transparent !important;
       height: auto;
       line-height: normal;
-      font-size: 1.25rem;
+      font-size: 1rem;
       color: #fff;
 
       &.is-active {
@@ -26,58 +30,58 @@
       }
     }
   }
+}
 
-  .navigation-bar-mobile {
-    z-index: 999;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    min-height: 41px;
-    background-color: $color-primary;
+.navigation-bar-mobile {
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  min-height: 41px;
+  background-color: $color-primary;
+  height: 0;
+  transition: height .5s ease-in-out;
+
+  &.active {
+    height: 100vh;
+    overflow: auto;
+  }
+
+  .navigation-bar-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
     height: 0;
     transition: height .5s ease-in-out;
+    background-color: #000;
+    min-height: unset;
 
-    &.active {
-      height: 100vh;
-      overflow: auto;
+    .el-menu-item {
+      text-align: center;
+      font-size: 0;
+      opacity: 0;
+      color: #fff;
+      transition: opacity .3s ease-in-out;
     }
 
-    .navigation-bar-menu {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 0;
-      width: 100%;
+    .theme-switcher {
       height: 0;
-      transition: height .5s ease-in-out;
-      background-color: #000;
-      min-height: unset;
+      opacity: 0;
+    }
+
+    &.active {
+      height: 500px;
 
       .el-menu-item {
-        text-align: center;
-        font-size: 0;
-        opacity: 0;
-        transition: opacity .3s ease-in-out;
+        font-size: 1.563rem;
+        margin: 15px 0;
+        opacity: 1;
       }
 
       .theme-switcher {
-        height: 0;
-        opacity: 0;
-      }
-
-      &.active {
-        height: 500px;
-
-        .el-menu-item {
-          font-size: 1.563rem;
-          margin: 15px 0;
-          opacity: 1;
-        }
-
-        .theme-switcher {
-          height: auto;
-          opacity: 1;
-          transition: opacity 0.3s ease-in-out;
-        }
+        height: auto;
+        opacity: 1;
+        transition: opacity 0.3s ease-in-out;
       }
     }
   }
