--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -1,37 +1,103 @@
 .portfolio {
-    .slick-track {
-        display: flex;
-        height: 250px;
+  margin-top: 50px;
+  position: relative;
+  overflow: hidden;
+
+
+  &:before {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    box-shadow: 0 0 50px 50px #000;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: 0 0 50px 50px #000;
+  }
+
+  @include for-sm {
+    &:before {
+      box-shadow: 0 0 100px 100px #000;
     }
 
-    .slick-slide {
+    &:after {
+      box-shadow: 0 0 100px 100px #000;
+    }
+  }
 
-
-        div {
-            height: 100%;
-        }
-
-        img {
-            height: 100%;
-        }
+  @include for-md {
+    &:before {
+      box-shadow: 0 0 200px 200px #000;
     }
 
-    .slick-prev, 
-    .slick-next {
-        width: 40px;
-        height: 40px;
-        z-index: 2;
+    &:after {
+      box-shadow: 0 0 200px 200px #000;
+    }
+  }
 
-        &::before {
-            font-size: 40px;
-        }
+  @include for-lg {
+    &:before {
+      box-shadow: 0 0 300px 300px #000;
     }
 
-    .slick-prev {
-        left: 25px;
+    &:after {
+      box-shadow: 0 0 300px 300px #000;
+    }
+  }
+
+  @include for-xl {
+    &:before {
+      box-shadow: 0 0 500px 500px #000;
     }
 
-    .slick-next {
-        right: 25px;
+    &:after {
+      box-shadow: 0 0 500px 500px #000;
     }
+  }
+
+
+  .slick-track {
+    display: flex;
+    height: 350px;
+  }
+
+  .slick-slide {
+
+
+    div {
+      height: 100%;
+    }
+
+    img {
+      height: 100%;
+    }
+  }
+
+  .slick-prev,
+  .slick-next {
+    width: 50px;
+    height: 50px;
+    z-index: 2;
+
+    &::before {
+      font-size: 50px;
+    }
+  }
+
+  .slick-prev {
+    left: 25px;
+  }
+
+  .slick-next {
+    right: 25px;
+  }
 }
