--- a/src/assets/scss/_stock.scss
+++ b/src/assets/scss/_stock.scss
@@ -4,6 +4,8 @@
 
   .stock-logo {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 
     img {
@@ -16,114 +18,169 @@
         height: 60px;
       }
     }
+
+    span {
+      margin: 20px 0;
+      color: #fff;
+      font-size: 14px;
+    }
   }
 
   .stock-info {
-    margin: 0 10px;
-  }
-
-  .stock-description {
-    text-align: center;
-    color: #fff;
-    font-size: 16px;
-    max-width: 700px;
-    margin: auto;
-  }
-
-  .slick-slider {
-    margin: 0 -15px;
-
-    @include for-sm {
-      margin: unset;
-    }
+    margin-bottom: 50px;
   }
 
   .stock-item-card {
-    display: flex;
-    flex-direction: column;
-    width: calc(100% - 20px);
-    background-color: $color-static;
-    border-radius: 30px;
-    margin: 25px 10px;
-    padding: 25px 0;
+    height: 350px;
+    padding: 25px;
+    margin: 10px;
+    background-color: #191919;
 
-    img {
-      width: 100%;
+    .stock-item-content {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      position: relative;
+      z-index: 1;
     }
-
-    @include for-md {
-      width: calc(100% - 50px);
-      margin: 25px;
-    }
-  }
-
-  .stock-item-title {
-    padding: 0 20px;
 
     h3 {
-      text-align: center;
-      font-size: 28px;
-      font-weight: 700;
       color: #fff;
-      margin-top: 0;
-      margin-bottom: 0;
-      text-transform: uppercase;
+      font-size: 40px;
+      margin: 0;
+      width: 330px;
+    }
 
-      @include for-md {
-        font-size: 32px;
+    h4 {
+      font-size: 25px;
+      color: #fff;
+      margin: 0;
+    }
+
+    .stock-item-tags {
+      max-width: 330px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px;
+      margin: 20px 0;
+
+      .stock-item-tag {
+        font-size: 14px;
+        color: #fff;
+      }
+    }
+
+    .stock-item-description {
+      margin-top: auto;
+      max-width: 500px;
+
+      p {
+        color: #fff;
+        font-size: 14px;
+      }
+    }
+
+    .stock-item-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 20px;
+      background-color: #191919;
+      margin: -25px;
+      padding: 25px;
+      position: relative;
+      z-index: 1;
+
+      p {
+        margin: 0;
+      }
+    }
+
+    .stock-item-footer {
+      position: relative;
+      z-index: 1;
+    }
+
+    .stock-item-btn {
+      position: relative;
+      z-index: 1;
+
+      a {
+        font-size: 30px;
+        text-decoration: none;
+        color: #fff;
       }
     }
   }
 
-  .stock-item-description {
-    padding: 0 20px;
+  .jewelry-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-image: url("@/assets/jewelry.png");
 
-    p {
-      text-align: center;
-      color: #000;
-      margin-top: 0;
-      margin-bottom: 25px;
-      font-weight: 700;
+    @include for-md {
+      flex-direction: row;
+      align-items: center;
     }
   }
 
-  .stock-item-animation {
-    min-height: 175px;
-    overflow: hidden;
+  .studio-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: url("@/assets/studio.png");
+  }
+
+  .sound-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: url("@/assets/sound.png");
+
+    .stock-item-description {
+      text-align: right;
+    }
+  }
+
+  .fonts-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: url("@/assets/fonts.png");
+
+    .stock-item-description {
+      text-align: right;
+    }
+  }
+}
+
+.stock-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 0 10px;
+
+  .stock-icon {
     display: flex;
 
-    img {
-      width: 100%;
-    }
-  }
-
-  .stock-item-button {
-    text-align: center;
-    margin-top: 25px;
-
-    a {
-      text-decoration: none;
+    i {
       color: #fff;
-      font-size: 20px;
-      font-weight: 700;
-    }
-  }
-
-  .stock-footer {
-    margin: 0 10px;
-
-    p {
-      color: #fff;
-      font-size: 16px;
-      text-align: center;
-    }
-
-    h5 {
-      color: #FFD800;
-      font-size: 40px;
-      margin: 0;
-      text-align: center;
-      line-height: 1;
+      font-size: 36px;
     }
   }
 }
