--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -3,4 +3,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  .tags {
+    max-width: 600px;
+    margin: 0;
+
+    .tag-item {
+      a {
+        font-size: 14px;
+      }
+    }
+  }
 }
