--- a/src/assets/scss/_tags.scss
+++ b/src/assets/scss/_tags.scss
@@ -3,13 +3,13 @@
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
-  max-width: 600px;
+  margin: 100px auto;
 
   .tag-item {
     line-height: 1;
 
     a {
-      font-size: 14px;
+      font-size: 24px;
       text-decoration: none;
       color: #fff;
       opacity: 0.5;
