UI small refactoring

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -90,3 +90,35 @@ body {
         box-shadow: 0 0 100px 100px #000;
     }
 }
+
+/** ----- request design btn ----- **/
+.request-design-btn {
+    position: fixed;
+    bottom: 50px;
+    right: 0;
+    left: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+
+    @include for-lg {
+        left: auto;
+        right: 50px;
+    }
+
+    a {
+        font-family: 'Poppins', sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+        text-decoration: none;
+        padding: 15px 25px;
+        color: #000;
+        background-color: #ffdd00;
+        border-radius: 15px;
+
+        @include for-md {
+            font-size: 18px;
+            padding: 20px 30px;
+        }
+    }
+}
