--- a/src/assets/scss/_icons.scss
+++ b/src/assets/scss/_icons.scss
@@ -1,21 +1,27 @@
-.icon-youtube:before {
+.icon-instagram:before {
   content: "\e900";
+  color: #fff;
 }
-.icon-a:before {
+.icon-youtube:before {
   content: "\e901";
-}
-.icon-camera:before {
-  content: "\e902";
+  color: #fff;
 }
 .icon-sound:before {
-  content: "\e903";
+  content: "\e902";
+  color: #fff;
 }
-.icon-jewelry:before {
+.icon-ring:before {
+  content: "\e903";
+  color: #fff;
+}
+.icon-next:before {
   content: "\e904";
 }
-.icon-behance:before {
+.icon-camera:before {
   content: "\e905";
+  color: #fff;
 }
-.icon-instagram:before {
+.icon-behance:before {
   content: "\e906";
+  color: #fff;
 }
