Create portfolio component

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -9,12 +9,17 @@ body {
 }
 
 .shadow {
-    box-shadow: 0 0 20px 0 $color-secondary;
+    box-shadow: 0 0 20px 0 $color-secondary!important;
 }
 
 .section-vh {
     height: 100vh;
     min-height: 700px;
+}
+
+.section-vh-auto {
+    height: auto;
+    min-height: auto;
 }
 
 /** ------ RESPONSIVE BREACK POINTS ----- **/
