--- a/src/assets/scss/_tags.scss
+++ b/src/assets/scss/_tags.scss
@@ -7,15 +7,19 @@
 
   .tag-item {
     line-height: 1;
+  }
 
-    a {
-      font-size: 23px;
-      text-decoration: none;
-      color: #fff;
-      opacity: 0.5;
+  a {
+    font-size: 23px;
+    text-decoration: none;
+    color: #fff;
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
     }
 
-    &:hover a {
+    &.router-link-active {
       opacity: 1;
     }
   }
