--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -2,6 +2,7 @@
   margin-top: 50px;
   position: relative;
   overflow: hidden;
+  margin-bottom: 100px;
 
 
   &:before {
@@ -70,8 +71,6 @@
   }
 
   .slick-slide {
-
-
     div {
       height: 100%;
     }
