Upload content for amazon listing and components refactoring

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -4,6 +4,14 @@
   align-items: center;
   padding: 0 20px;
 
+  .logo {
+    max-width: 200px;
+
+    img {
+      width: 100%;
+    }
+  }
+
   @include for-md {
     background-color: $color-primary;
   }
@@ -24,6 +32,7 @@
       line-height: normal;
       font-size: 1rem;
       color: #fff;
+      padding: 0 20px!important;
 
       &.is-active {
         border-color: transparent;
@@ -64,6 +73,7 @@
       opacity: 0;
       color: #fff;
       transition: opacity .3s ease-in-out;
+      padding: 0 20px!important;
     }
 
     .theme-switcher {
