--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -5,14 +5,15 @@
   justify-content: center;
   min-height: 500px;
 
-  .tags {
-    max-width: 600px;
+  h1 {
+    color: #fff;
+    font-size: 42px;
     margin: 0;
+  }
 
-    .tag-item {
-      a {
-        font-size: 14px;
-      }
-    }
+  h2 {
+    color: #fff;
+    font-weight: 200;
+    margin: 0;
   }
 }
