--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -37,6 +37,7 @@
                 font-size: 16px;
                 text-align: center;
                 height: 34px;
+                padding: 0 20px!important;
 
                 &:focus,
                 &:hover {
