--- a/src/assets/scss/_portfolio-view.scss
+++ b/src/assets/scss/_portfolio-view.scss
@@ -1,3 +1,12 @@
+.portfolio-view-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 300px;
+  margin-top: 70px;
+}
+
 .portfolio-items {
   display: flex;
   flex-wrap: wrap;
