--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -9,11 +9,22 @@
     color: #fff;
     font-size: 42px;
     margin: 0;
+    animation: fadeIn 2s ease-in-out;
   }
 
   h2 {
     color: #fff;
     font-weight: 200;
     margin: 0;
+    animation: fadeIn 3s ease-in-out;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
