--- a/src/assets/scss/_portfolio-view.scss
+++ b/src/assets/scss/_portfolio-view.scss
@@ -82,6 +82,12 @@
           font-size: 12px;
         }
       }
+
+      span {
+        color: #fff;
+        opacity: 0.5;
+        margin-right: 5px;
+      }
     }
   }
 }
@@ -131,5 +137,38 @@
 
   video {
     width: 100%;
+  }
+}
+
+.portfolio-video {
+  margin: 50px auto 50px;
+  display: flex;
+  justify-content: center;
+  max-width: 600px;
+
+  video {
+    width: 100%;
+  }
+}
+
+.portfolio-explore-btn {
+  a {
+    font-weight: 400;
+    text-decoration: none;
+    color: #fff;
+    transition: .5s ease-in-out;
+    border-radius: 15px;
+    border: 1px solid #fff;
+    padding: 5px 15px;
+
+    @include for-md {
+      padding: 5px 20px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      transform: translateY(-5px);
+      box-shadow: 0 10px 30px 4px $color-secondary;
+    }
   }
 }
