--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -1,112 +1,6 @@
-.portfolio {
-  margin-top: 50px;
-  position: relative;
-  overflow: hidden;
-  margin-bottom: 100px;
-  height: 350px;
-
-  &:before {
-    content: '';
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    box-shadow: 0 0 50px 25px #000;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    box-shadow: 0 0 50px 25px #000;
-  }
-
-  @include for-sm {
-    &:before {
-      box-shadow: 0 0 100px 100px #000;
-    }
-
-    &:after {
-      box-shadow: 0 0 100px 100px #000;
-    }
-  }
-
-  @include for-md {
-    &:before {
-      box-shadow: 0 0 200px 200px #000;
-    }
-
-    &:after {
-      box-shadow: 0 0 200px 200px #000;
-    }
-  }
-
-  @include for-lg {
-    &:before {
-      box-shadow: 0 0 300px 300px #000;
-    }
-
-    &:after {
-      box-shadow: 0 0 300px 300px #000;
-    }
-  }
-
-  @include for-xl {
-    &:before {
-      box-shadow: 0 0 500px 500px #000;
-    }
-
-    &:after {
-      box-shadow: 0 0 500px 500px #000;
-    }
-  }
-
-  .slick-track {
-    display: flex;
-    height: 350px;
-  }
-
-  .slick-slide {
-    div {
-      height: 100%;
-    }
-
-    img {
-      height: 100%;
-    }
-  }
-
-  .slick-prev,
-  .slick-next {
-    width: 50px;
-    height: 50px;
-    z-index: 2;
-
-    &::before {
-      font-size: 50px;
-    }
-  }
-
-  .slick-prev {
-    left: 25px;
-  }
-
-  .slick-next {
-    right: 25px;
-  }
-
-  p {
-    color: #fff;
-    text-align: center;
-    margin-bottom: 0;
-  }
-}
-
 .portfolio-title {
+  margin-bottom: 70px;
+
   h1 {
     color: #fff;
     text-align: center;
@@ -126,6 +20,23 @@
     }
   }
 
+  a {
+    text-decoration: none;
+    width: fit-content;
+  }
+
+  h2 {
+    color: #fff;
+    text-align: center;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 400;
+
+    @include for-md {
+      font-size: 34px;
+    }
+  }
+
   p {
     color: #fff;
     text-align: center;
@@ -138,57 +49,15 @@
   flex-wrap: wrap;
   gap: 10px;
   margin-bottom: 100px;
+}
 
-  .project-category {
-    position: relative;
-    width: 100%;
-    min-height: 200px;
-    border: 1px solid #fff;
-    border-radius: 15px;
-    transition: .5s ease-in-out;
+.portfolio-explore-btn {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  margin: auto;
 
-    @include for-sm {
-      width: calc(270px - 7px);
-      height: 170px;
-    }
-
-    @include for-md {
-      width: calc(240px - 9px);
-      height: 140px;
-    }
-
-    @include for-lg {
-      width: calc(320px - 9px);
-      height: 220px;
-    }
-
-    @include for-xl {
-      width: calc(380px - 9px);
-      height: 280px;
-    }
-
-    &:hover {
-      opacity: 1;
-      transform: translateY(-5px);
-      box-shadow: 0 10px 30px 4px $color-secondary;
-    }
-
-    .project-category-label {
-      position: absolute;
-      left: 20px;
-      bottom: 20px;
-
-      h2 {
-        text-transform: capitalize;
-        color: #fff;
-        margin: 0;
-      }
-
-      span {
-        color: #fff;
-        opacity: 0.5;
-        margin-right: 5px;
-      }
-    }
+  .btn-left {
+    transform: rotate(180deg);
   }
 }
