Fix bug i=on portfolio view page.

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -88,6 +88,7 @@
     top: -500px;
 
     .el-menu-item {
+      background-color: transparent !important;
       height: 34px;
       text-align: center;
       font-size: 0;
