--- a/src/assets/scss/_portfolio-view.scss
+++ b/src/assets/scss/_portfolio-view.scss
@@ -95,6 +95,7 @@
 .portfolio-modal {
   &.el-dialog {
     width: 90%;
+    max-width: 1400px;
     background-color: $color-primary;
     border: 1px solid #fff;
     border-radius: 15px;
