--- a/src/assets/scss/_tags.scss
+++ b/src/assets/scss/_tags.scss
@@ -1,28 +1,43 @@
 .tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 5px;
   justify-content: center;
-  margin: 40px auto;
+  margin: 20px auto;
+
+  @include for-md {
+    gap: 10px;
+    margin: 40px auto;
+  }
 
   .tag-item {
     line-height: 1;
   }
 
   a {
-    font-size: 23px;
+    font-size: 14px;
     text-decoration: none;
     color: #fff;
     opacity: 0.5;
     transition: .5s ease-in-out;
-    border-radius: 15px;
+    border-radius: 10px;
     border: 1px solid #fff;
     padding: 5px 10px;
 
+    @include for-md {
+      font-size: 23px;
+      border-radius: 15px;;
+    }
+
     &:hover {
       opacity: 1;
-      transform: translateY(-5px);
-      box-shadow: 0 10px 30px 4px $color-secondary;
+      transform: translateY(-2px);
+      box-shadow: 0 5px 10px 4px var(--second-color);
+
+      @include for-md {
+        transform: translateY(-5px);
+        box-shadow:0 10px 30px 4px $color-secondary;
+      }
     }
 
     &.router-link-active {
