--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -127,3 +127,23 @@ body {
         }
     }
 }
+
+/** ----- loader ----- **/
+.loader {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 99999;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .loader-animation {
+        width: 50px;
+        height: 50px;
+    }
+}
