Create dropdown component

--- a/src/assets/scss/_membership.scss
+++ b/src/assets/scss/_membership.scss
@@ -6,9 +6,19 @@
   margin-bottom: 50px;
 }
 
-.membership-block {
+.membership-item {
   width: 100%;
   max-width: 300px;
+  margin: auto;
+
+  @include for-lg {
+    width: calc(33.3% - 20px);
+    max-width: unset;
+    margin: unset;
+  }
+}
+
+.membership-block {
   margin: 0 auto;
   padding: 50px 30px;
   border-radius: 30px;
@@ -21,10 +31,6 @@
     img {
       width: 100%;
     }
-  }
-
-  @include for-lg {
-    width: calc(33.3% - 90px);
   }
 
   &.move-down {
@@ -125,7 +131,7 @@
   bottom: 0;
   width: 0;
   height: 0;
-  border-left: 12px solid black;
+  border-left: 12px solid $color-primary;
   border-top: 12px solid transparent;
   border-bottom: 12px solid transparent;
 }
@@ -136,7 +142,7 @@
   bottom: 0;
   width: 0;
   height: 0;
-  border-right: 12px solid black;
+  border-right: 12px solid $color-primary;
   border-top: 12px solid transparent;
   border-bottom: 12px solid transparent;
 }
