Add collapse and stock component, small refactoring, improvements.

--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 100px 0;
+  padding: 0 0 100px;
 
   .contact-button {
     max-width: calc(275px - 60px);
