--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -50,7 +50,8 @@
 
   .about-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 
