--- a/src/assets/scss/_membership.scss
+++ b/src/assets/scss/_membership.scss
@@ -8,15 +8,20 @@
   h1 {
     width: 100%;
     color: #fff;
-    font-size: 90px;
+    font-size: 34px;
     text-align: center;
     font-style: italic;
+    margin-bottom: 80px;
+
+    @include for-lg {
+      font-size: 80px;
+    }
   }
 }
 
 .membership-item {
   position: relative;
-  width: 100%;
+  width: 90%;
   max-width: 300px;
   margin: auto;
 
@@ -118,7 +123,7 @@
     }
   }
 
-  &-title {
+  &-shape {
     color: #000;
     text-transform: uppercase;
     text-align: center;
@@ -204,32 +209,53 @@
 
 
 .membership-benefits {
+  margin-top: 50px;
   margin-bottom: 50px;
 
+  @include for-lg {
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
   h2 {
-    font-size: 50px;
+    font-size: 34px;
     font-style: italic;
     color: #fff;
     line-height: 1;
     text-align: center;
-    margin: 0 auto 30px;
+    margin: 0 auto 15px;
 
     @include for-lg {
       font-size: 80px;
     }
   }
 
-  h3 {
-    font-size: 30px;
-    color: #fff;
-    text-align: center;
-    margin: 0 auto 30px;
+  &-block-title {
+    max-width: 280px;
+    margin: auto;
+
+    @include for-lg {
+      max-width: unset;
+    }
+
+    h3 {
+      font-size: 20px;
+      color: #fff;
+      text-align: center;
+      margin: 0 auto 80px;
+      font-weight: 400;
+
+      @include for-lg {
+        font-size: 30px;
+      }
+    }
   }
 
   &-content {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    margin-top: 80px;
   }
 
   &-item {
@@ -254,9 +280,6 @@
   &-image {
     width: 100px;
     height: 100px;
-    //background-color: #ffdd00;
-    //border-radius: 50%;
-    //overflow: hidden;
     margin: 0 auto 30px;
 
     img {
@@ -267,15 +290,51 @@
   &-title {
     h3 {
       color: #fff;
-      font-size: 30px;
+      font-size: 24px;
       text-transform: uppercase;
+      font-weight: 900;
+      font-style: italic;
+      margin: 0 0 10px;
+      line-height: 1.3;
+
+      @include for-lg {
+        font-size: 30px;
+      }
     }
   }
 
   &-info {
     p {
       color: #fff;
-      font-size: 20px;
+      font-size: 18px;
+      font-weight: 400;
+      margin: 0;
+      line-height: 1.3;
+
+      @include for-lg {
+        font-size: 20px;
+      }
+    }
+  }
+}
+
+.membership-block-title {
+  max-width: 280px;
+  margin: auto;
+
+  @include for-lg {
+    max-width: unset;
+  }
+
+  h3 {
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    margin: 0 auto 80px;
+    font-weight: 400;
+
+    @include for-lg {
+      font-size: 30px;
     }
   }
 }
