--- a/src/assets/scss/_stock.scss
+++ b/src/assets/scss/_stock.scss
@@ -2,31 +2,20 @@
   padding: 120px 0;
   background-color: #000;
 
-  .stock-logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  .stock-block-title {
+    margin-bottom: 100px;
 
-    img {
-      max-width: 500px;
-      width: 100%;
-      height: auto;
+    h2 {
+      font-size: 34px;
+      font-style: italic;
+      color: #fff;
+      line-height: 1;
+      text-align: center;
+      margin: 0 auto 15px;
 
-      @include for-md {
-        width: auto;
-        height: 60px;
+      @include for-lg {
+        font-size: 80px;
       }
-    }
-
-    span {
-      margin: 20px 0;
-      color: #fff;
-      font-size: 14px;
-    }
-
-    p {
-      color: #fff;
     }
   }
 
@@ -197,23 +186,6 @@
       a {
         color: #a0fa00;
       }
-    }
-  }
-}
-
-.stock-icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin: 0 10px;
-
-  .stock-icon {
-    display: flex;
-
-    i {
-      color: #fff;
-      font-size: 36px;
     }
   }
 }
